# TrainDisplay

./: .gitignore  README.md
doc/: pinout.txt
pcb/: PCB_PCB_TrainDisplay_2022-06-10.json  SCH_TrainDisplay_2022-06-10.json
src/InternalTestApp/: settings.gradle
src/InternalTestApp/app/: build.gradle
src/InternalTestApp/app/src/main/: AndroidManifest.xml
src/InternalTestApp/app/src/main/res/values/: strings.xml  themes.xml
src/InternalTestApp/gradle/wrapper/: gradle-wrapper.properties
src/SignGeneratorGUI/: CMakeLists.txt  PlatformInfo.cpp  PlatformInfo.h
src/SignGeneratorGUI/python/: generate_timetable.py  webserver.py
src/TrainDisplayManager/: build.gradle
src/TrainDisplayManager/app/: build.gradle
src/TrainDisplayManager/app/src/main/: AndroidManifest.xml
src/TrainDisplayManager/app/src/main/res/layout/: activity_main.xml  alert_dialog_ip.xml  fragment_first.xml
src/TrainDisplayManager/app/src/main/res/menu/: menu_main.xml
src/TrainDisplayManager/gradle/wrapper/: gradle-wrapper.properties
src/android/TrainDisplayManager/: settings.gradle
src/android/TrainDisplayManager/gradle/wrapper/: gradle-wrapper.properties
src/cpp/: main.cpp
src/misc/: generate_name_eva_map.py  name_eva_mapping.json  webserver.service
src/old/cpluspus/: Makefile  main.cpp
src/old/train_display/: train_display.ino
src/old/train_display02/: train_display02.ino
src/python/: generate_timetable.py  requirements.txt  webserver.py
src/python/deutsche_bahn_api/: station_helper.py
src/train_display/: train_display.ino
src/train_display03/: train_display03.ino
(+20 files in other folders)
